Bug 1757827 - Improve win11 overlay scrollbars. r=saschanaz,cmartin

Tweaks are:

 * Round the scrollbar track (when visible, which is almost never).
 * Make the scrollbar thinner.
 * Move the thumb closer to the edge.

All these changes match closer the Windows 11 style, and there are no changes
for other existing styles.

Differential Revision: https://phabricator.services.mozilla.com/D140127